infra/kubernetes/services/article/article-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: article
  labels:
    app: article
spec:
  replicas: 1
  selector:
    matchLabels:
      app: article
      task: article
  template:
    metadata:
      labels:
        app: article
        task: article
        version: v0.0.1
    spec:
      containers:
      - name: article
        image: danniilperestoronin/article:0.0.1
        ports:
        - containerPort: 80
