infra/kubernetes/services/article/article-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: article
spec:
  ports:
  - name: article-http
    targetPort: 8082
    port: 80
  selector:
    app: article
    task: article
