infra/kubernetes/services/article/article-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: article
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
        - path: /api/article
          backend:
            serviceName: article
            servicePort: article-http
